--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@
 			<meta name="description" contents="The Angel's official">
 		<title>The Angel's official</title>
    	<link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
+  <style>
+
   </style>
 </head> 
 <body>
-<header>
+<header> 
 	<div class="header">
-		<a href="#default" class="logo">Logo</a>
+		<a href="#default" class="logo">The__Angel_s</a>
 		    <div class="header-right">
-			    <ul class="nav-list">
+			    <ul class="nav-list nav-bar nav">
 				<li><a class="active" href="#home">Home</a></li>
-				<li><a  href="#contact">Contact</a></li>
-				<li><a  href="About.html">About</a></li>
-				</ul>
-		</div>	
+				<li><a class="header-right" href="#contact">Contact</a></li>
+				<li><a class="header-right" href="About.html">About</a></li>
+			    </ul>
+		    </div>
 	</div>	
 </header>
-<a>bhgn.jgh</a>
 <footer>
 </footer>
 </body>
