--- a/About.html
+++ b/About.html
@@ -15,7 +15,7 @@
 		    <div class="header-right">
 			    <ul class="nav-list">
 					
-					<li><a rel="stylesheet" type="text/html" href="About.html">About</a></li>
+					<li><a  href="About.html">About</a></li>
 			    </ul>
 		    </div>	
 	  </div>
